--- a/less/order-form.less
+++ b/less/order-form.less
@@ -2,6 +2,15 @@
   .wrapper;
   width: @screen-xs;
 
+  @media (max-width: @screen-xs) {
+    width: 100%;
+    padding: 0 @grid-gutter-width/2;
+
+    bit-tabs > ul {
+      margin: 0 -15px;
+    }
+  }
+
   bit-panel {
     display: block;
     margin-top: 20px;
@@ -61,3 +70,4 @@
 .nav.nav-tabs {
   height: 42px;
 }
+
