small screen: header menu spacing

--- a/less/header.less
+++ b/less/header.less
@@ -2,7 +2,6 @@ header {
   height: @navbar-height;
   margin-bottom: @navbar-margin-bottom;
   background-color: @navbar-default-bg;
-  padding: 5px;
   color: @navbar-default-color;
   text-align: center;
   
@@ -65,6 +64,10 @@ header {
       }
     }
   }
+
+  .navbar-header {
+    padding: 5px;
+  }
 }
 .breadcrumb {
   .wrapper;
@@ -88,6 +91,9 @@ header {
          }
        }
      }
+   }
+   h1 {
+     margin-left: 10px;
    }
   }
 }
