--- a/less/header.less
+++ b/less/header.less
@@ -10,7 +10,7 @@ header {
     display: inline-block;
     line-height: @navbar-height - (@navbar-padding-horizontal*2);
     margin: 0;
-    padding: 0;
+    padding: 5px 0 0 0;
     margin-right: @grid-gutter-width;
   }
   a {
@@ -59,14 +59,13 @@ header {
 
       /* override bootstrap */
       &.navbar-nav > li > a {
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding: @grid-gutter-width/4 @grid-gutter-width/2;
       }
     }
   }
 
-  .navbar-header {
-    padding: 5px;
+  .navbar-collapse {
+    padding-top: 5px;
   }
 }
 .breadcrumb {
