--- a/less/homepage.less
+++ b/less/homepage.less
@@ -13,4 +13,11 @@
     float: right;
     margin-left: @grid-gutter-width/2;
   }
+
+  @media (max-width: @screen-sm-max) {
+    position: absolute;
+    top: 50px;
+    bottom: 0;
+    margin-bottom: 0;
+  }
 }
