--- a/less/styles.less
+++ b/less/styles.less
@@ -11,7 +11,7 @@
 @import "type.less";
 @import "tables.less";
 @import "forms.less";
-@import "buttons.less"; 
+@import "buttons.less";
 
 // Components
 @import "navs.less";
@@ -28,3 +28,4 @@
 @import "restaurants.less";
 @import "order-form.less";
 @import "loading.less";
+@import "navbar.less";
