- added fix to errors in less files

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -2,7 +2,7 @@
   .jumbotron;
   .wrapper;
   padding: @grid-gutter-width !important;
-  margin-bottom: @grid-gutter-width/2;
+  margin-bottom: (@grid-gutter-width / 2);
 
   a[role="button"] {
     .btn;
@@ -11,7 +11,7 @@
   }
   img {
     float: right;
-    margin-left: @grid-gutter-width/2;
+    margin-left: (@grid-gutter-width / 2);
   }
 
   @media (max-width: @screen-sm-max) {
