--- a/less/order-form.less
+++ b/less/order-form.less
@@ -59,13 +59,13 @@
   .text-shadow;
   
   .background {
-    padding: @grid-gutter-width/2;
+    padding: (@grid-gutter-width/2);
     background-color: rgba(0,0,0,.6);
     .black-gradient;
   }
 }
 .tab-pane {
-  padding: @grid-gutter-width/2;
+  padding: (@grid-gutter-width/2);
 }
 .nav.nav-tabs {
   height: 42px;
