--- a/less/header.less
+++ b/less/header.less
@@ -17,7 +17,7 @@ header {
     font-size: @font-size-h5;
     color: @navbar-default-link-color;
     .border-radius;
-    margin-right: @grid-gutter-width/2;
+    margin-right: (@grid-gutter-width/2);
 
     &:hover {
       color: @navbar-default-link-color;
@@ -48,7 +48,7 @@ header {
         display: inline-block;
         a {
           display: block;
-          padding: @grid-gutter-width/4 @grid-gutter-width/2;
+          padding: (@grid-gutter-width/4) (@grid-gutter-width/2);
           border: 1px solid #fff;
          // line-height: @navbar-height - (@navbar-padding-horizontal*2);
         }
@@ -56,7 +56,7 @@ header {
 
       /* override bootstrap */
       &.navbar-nav > li > a {
-        padding: @grid-gutter-width/4 @grid-gutter-width/2;
+        padding: (@grid-gutter-width/4) (@grid-gutter-width/2);
       }
     }
   }
