--- a/less/restaurants.less
+++ b/less/restaurants.less
@@ -1,14 +1,14 @@
 .restaurant {
   .border;
-  padding: @grid-gutter-width/2;
-  margin-bottom: @grid-gutter-width/2;
+  padding: (@grid-gutter-width/2);
+  margin-bottom: (@grid-gutter-width/2);
   
   h3, h2 {
     margin-top: 0;
   }
   img {
     float: left;
-    margin-right: @grid-gutter-width/2;
+    margin-right: (@grid-gutter-width/2);
     .border;
   }
   .address {
@@ -80,12 +80,12 @@
 @media (max-width: @screen-sm-max) {
 
   .restaurants, h2.page-header, .restaurant-content {
-    padding-left: @grid-gutter-width/2;
-    padding-right: @grid-gutter-width/2;
+    padding-left: (@grid-gutter-width/2);
+    padding-right: (@grid-gutter-width/2);
   }
   .restaurant, h2.page-header {
-    margin-left: -@grid-gutter-width/2;
-    margin-right: -@grid-gutter-width/2;
+    margin-left: (-@grid-gutter-width/2);
+    margin-right: (-@grid-gutter-width/2);
   }
 
 }
